<resources>
    <string name="app_name">FAMILY LINKS</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="nbr_family_member">40</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_list_users">listUsers</string>
    <string name="title_activity_add_person">AddPersonActivity</string>
    <string name="title_activity_add_Relation">Add a relation</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="title_activity_login3">Sign in3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sate_selected">date_selected</string>
    <string name="fatherImage">Father</string>
    <string name="childName"></string>
    <string name="motherImage">motherImage</string>
    <string name="personImage">personImage</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="title_activity_register2">RegisterActivity2</string>
    <string name="title_activity_register3">RegisterActivity3</string>
    <string name="imageSelected">imageSelected</string>
    <string name="textSelected">Name+text</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addSpouseButton">addSpouseButton</string>
    <string name="addFatherImage">addFatherImage</string>
    <string name="addFatherLabel">aaa</string>
    <string name="addMotherImage">addMotherImage</string>
    <string name="addMotherLabel">aaa</string>
    <string name="title_activity_profile_other">ProfileOtherActivity</string>
</resources>
