<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <!-- Login progress -->


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <LinearLayout android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--<ImageButton
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:id="@+id/imageButton"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logoapp"
                android:scaleType="fitXY" />-->
            <ImageView
                android:id="@+id/img_show"

                android:layout_width="500dp"
                android:layout_height="200dp"
                android:src="@drawable/sanstitre"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/btn_choose_image"
                android:layout_toEndOf="@+id/btn_choose_image" />
            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_username"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/password" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified" android:inputType="textPassword"
                    android:maxLines="1" android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/email_sign_in_button"

                android:text="Sign in"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:layout_width="300dp"
                android:layout_marginTop="12dp"
                android:layout_height="40dp"
                android:background="@drawable/buttonsign"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"

                />
                <Button
                    android:id="@+id/register_button"
                    android:text="Register"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:layout_gravity="center"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/buttonregister"
                    android:shadowColor="#A8A8A8"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="5"
                    />

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:id="@+id/login_progress"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:visibility="invisible"
                android:max="100"
                android:layout_gravity="center"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>

