<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:wheel="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragmentTree">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/searchBar">
        <com.quinny898.library.persistentsearch.SearchBox
            android:layout_width="wrap_content"
            android:id="@+id/searchbox"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/searchBar"
        android:weightSum="3">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:weightSum="2"
            android:minHeight="110dp">
            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/fatherCardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="2dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="12dp"
                android:clickable="true"
                android:minHeight="110dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:minHeight="110dp">

                    <ImageView
                        android:id="@+id/addFather"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_action_add_person"
                        android:contentDescription="@string/addFatherImage"
                        android:layout_centerHorizontal="true"
                        android:maxWidth="60dp" />

                    <TextView
                        android:id="@+id/fatherLabel"
                        android:layout_below="@+id/addFather"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/addFatherLabel"
                        android:layout_centerHorizontal="true"
                        />
                </RelativeLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/motherCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="24dp"
                android:clickable="true"
                android:minHeight="110dp"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:minHeight="110dp">

                    <ImageView
                        android:id="@+id/addMother"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/ic_action_add_person"
                        android:contentDescription="@string/addMotherImage"
                        android:maxWidth="60dp" />

                    <TextView
                        android:id="@+id/motherLabel"
                        android:layout_below="@+id/addMother"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/addMotherLabel"
                        />
                </RelativeLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:weightSum="20"
            android:paddingTop="6dp"
            android:baselineAligned="false"
            android:minHeight="96dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="top"
                android:paddingTop="6dp"
                android:layout_weight="5"
                android:orientation="vertical"
                android:layout_centerHorizontal="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Children"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"/>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/childList"
                    android:layout_height="250dp"
                    android:layout_width="match_parent"
                    android:backgroundTint="@color/background"
                    android:orientation="horizontal"
                    android:layout_centerHorizontal="true">
                </android.support.v7.widget.RecyclerView>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="80dp">
                    <Button
                        android:id="@+id/addChild"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:drawableBottom="@drawable/ic_action_add_group"
                        android:clickable="true"
                        android:onClick="addChild"
                        android:layout_centerHorizontal="true" />
                </LinearLayout>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center|center_horizontal"
                android:layout_weight="10"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/selectedPerson"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/photoprofil"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/imageSelected" />
                <Button
                    android:id="@+id/profileSelected"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/selectedPerson"
                    android:background="@drawable/avatarp"
                    android:layout_alignRight="@+id/selectedPerson"
                    android:layout_marginRight="22dp"
                    android:layout_marginTop="-50dp"
                    />
                <TextView
                    android:id="@+id/selectedPersonLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/textSelected"
                    android:layout_below="@+id/selectedPerson"/>
                <android.support.v7.widget.CardView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/spouseCardView"
                    android:layout_below="@+id/selectedPersonLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:clickable="true"
                    >

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:layout_centerHorizontal="true"
                        android:gravity="center_horizontal">
                        <TextView
                            android:id="@+id/labelSpouseT"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="Spouse" />
                        <ImageView
                            android:id="@+id/addSpouse"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_below="@+id/labelSpouseT"
                            android:scaleType="centerCrop"
                            android:layout_centerHorizontal="true"
                            android:gravity="center_horizontal"
                            android:src="@drawable/ic_action_add_person"
                            android:contentDescription="@string/addSpouseButton" />

                        <TextView
                            android:id="@+id/spouseLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/addSpouse"
                            android:layout_centerHorizontal="true"
                            android:text="aaaa"
                            />
                    </RelativeLayout>
                </android.support.v7.widget.CardView>
                <Button
                    android:layout_width="40dp"
                    android:layout_height="40dp"

                    android:background="@drawable/sharel"
                    android:id="@+id/click"
                    android:layout_below="@+id/spouseCardView"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:layout_weight="5"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/broLabelT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text="Brothers" />
                <android.support.v7.widget.RecyclerView
                    android:layout_height="250dp"
                    android:layout_width="match_parent"
                    android:layout_below="@+id/broLabelT"
                    android:backgroundTint="@color/background"
                    android:id="@+id/rv">
                </android.support.v7.widget.RecyclerView>

            </RelativeLayout>
        </LinearLayout>


    </LinearLayout>
</RelativeLayout>
